addresses issue #244 adds a copy button to code blocks The patch affect `Website/ogdenwebb` by changing the template for block code to add a button, adding the js code to core.js, and adding CSS for the button (placing on top left of block). The JS has been tested for Firefox. Uses `execCommand`, which is deprecated because Firefox does not recognise all of Clipboard API. This took a while to get a copy that would remove all HTML but respect whitespace. MINOR change to `lists` CSS to align bullets with left margin.

--- a/Website/plugins/ogdenwebb/scss/themes/_themes-template-common.scss
+++ b/Website/plugins/ogdenwebb/scss/themes/_themes-template-common.scss
@@ -573,3 +573,9 @@ ul.rakudoc-item {
         }
     }
 }
+button.copy-raku-code {
+    cursor: pointer;
+    opacity: 0.5;
+    padding: 0 0.25rem 0.25rem 0.25rem;
+    position: absolute;
+}
